--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Samochody używane</title>
+    <script src="scripts/script.js" defer></script>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://js.arcgis.com/4.9/esri/css/main.css" rel="stylesheet" type="text/css">
+    <script src="https://js.arcgis.com/4.9/"></script>
 </head>
 <body>
 <div class ='grid-container'>
     <div id='title'>
         <h1>Samochody używane</h1>
     </div>
-    <div id='map'>Mapa</div>
+    <div id='mapa'>Mapa</div>
     <div class='product'>
         <div id='one'>
             Product1
